# wow-client-toolkit

./: .gitignore  Cargo.toml  LICENSE  README.md
audit/: README.md
audit/scripts/: audit_rce.py  decompile_handlers.py  find_indirect_refs.py  find_memcpy_in_handlers.py  find_pe_loaders.py  find_warden_targets.py  find_write_primitives.py  identify_handler.py  trace_callers.py
docs/: FINAL_REPORT.md  rce_vector_inventory.md
patcher/: Cargo.toml
patcher/src/: lib.rs  main.rs
runtime/: Cargo.toml
runtime/src/: api_hooks.rs  bg_handler.rs  decision.rs  handler_observe.rs  hook.rs  lib.rs  log.rs  pe.rs
